--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "git": "^0.1.5",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "string": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
