--- a/Black_box_server/package.json
+++ b/Black_box_server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "\"echo \\\"Error: no test specified\\\" && exit 1\",",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "react-scripts build"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "react-scripts": "^5.0.0"
   }
 }
