--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "\"echo \\\"Error: no test specified\\\" && exit 1\",",
-    "start": "nodemon server.js",
-    "build": "react-scripts build"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "nodemon": "^2.0.15",
-    "react-scripts": "^5.0.0"
+    "nodemon": "^2.0.15"
+
   }
 }
