--- a/Client/package.json
+++ b/Client/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.6.6",
     "git": "^0.1.5",
     "react": "^17.0.2",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
@@ -42,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    
   }
-  
-  
 }
