--- a/Client/package.json
+++ b/Client/package.json
@@ -8,9 +8,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "firebase": "^9.6.6",
     "git": "^0.1.5",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
@@ -25,6 +29,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "server": "nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
